# codify.rs

./: CHANGES.md  Cargo.toml  README.md
etc/ruby/: codify.rb
lib/codify/: Cargo.toml
lib/codify/src/: exit.rs  feature.rs  language.rs  lib.rs  main.rs  prelude.rs  type.rs
lib/codify/src/c/: type.rs
lib/codify/src/commands/: convert.rs
lib/codify/src/cpp/: type.rs
lib/codify/src/csharp/: type.rs
lib/codify/src/dart/: type.rs
lib/codify/src/go/: type.rs
lib/codify/src/java/: type.rs
lib/codify/src/javascript/: type.rs
lib/codify/src/python/: type.rs
lib/codify/src/ruby/: type.rs
lib/codify/src/rust/: type.rs
lib/codify/src/swift/: type.rs
lib/codify/src/typescript/: type.rs
lib/codify/tests/: csharp.rs  dart.rs  python.rs  typescript.rs
