# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Codify.rs"
#documentation = "https://docs.rs/codify/"
readme = true
homepage = "https://codify.rs"
repository = "https://github.com/artob/codify.rs"
license = "Unlicense"
keywords = []
categories = ["no-std"]
publish = true

[workspace.dependencies]
codify = { path = "lib/codify" }

[patch.crates-io]
codify = { path = "lib/codify" }
