# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Codify.rs translates between types from different programming languages."
#documentation = "https://docs.rs/codify/"
readme = true
homepage = "https://codify.rs"
repository = "https://github.com/artob/codify.rs"
license = "Unlicense"
keywords = ["abi", "ffi", "polyglot"]
categories = ["command-line-utilities", "development-tools::ffi", "no-std"]
publish = true

[workspace.dependencies]
codify = { path = "lib/codify" }

[patch.crates-io]
codify = { path = "lib/codify" }
