# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "codify"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "cli", "std"]
all = [
    "language-c",
    "language-cpp",
    "language-csharp",
    "language-dart",
    "language-go",
    "language-java",
    "language-javascript",
    "language-python",
    "language-ruby",
    "language-rust",
    "language-swift",
    "language-typescript",
    "serde",
]
cli = ["std", "dep:clap", "dep:clientele"]
language-c = []
language-cpp = []
language-csharp = []
language-dart = []
language-go = []
language-java = []
language-javascript = []
language-python = []
language-ruby = []
language-rust = []
language-swift = []
language-typescript = []
serde = ["dep:serde"]
std = ["clap?/std", "clientele?/std", "serde?/std"]

[build-dependencies]
shadow-rs = { version = "0.26", features = ["tzdb"], default-features = false }

[dependencies]
clap = { version = "4.5", default-features = false, optional = true }
clientele = { version = "=0.1.3", default-features = false, features = [
    "argfile",
    "clap",
    "color",
    "dirs",
    "dotenv",
    "parse",
    "unicode",
    "wild",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
