# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "codify"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "cli", "std"]
all = [
    "language-c",
    "language-cpp",
    "language-csharp",
    "language-dart",
    "language-go",
    "language-java",
    "language-javascript",
    "language-python",
    "language-ruby",
    "language-rust",
    "language-swift",
    "language-typescript",
    "libc",
    "serde",
]
cli = ["std", "dep:clap", "dep:clientele"]
language-c = []
language-cpp = []
language-csharp = []
language-dart = []
language-go = []
language-java = []
language-javascript = []
language-python = []
language-ruby = []
language-rust = []
language-swift = []
language-typescript = []
libc = ["dep:libc"]
serde = ["dep:serde"]
std = [
    "clap?/std",
    "clientele?/std",
    "dogma/std",
    "itertools/use_std",
    "libc?/std",
    "serde?/std",
]
unstable = ["dogma/unstable"]

[build-dependencies]
shadow-rs = { version = "0.26", features = ["tzdb"], default-features = false }

[dependencies]
clap = { version = "4.5", default-features = false, optional = true }
clientele = { version = "=0.1.4", default-features = false, features = [
    "argfile",
    "clap",
    "color",
    "dirs",
    "dotenv",
    "parse",
    "unicode",
    "wild",
], optional = true }
dogma = { version = "0.1", default-features = false }
itertools = { version = "0.13", default-features = false }
libc = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
